--- a/Doc/Bachelor Thesis/anotation.tex
+++ b/Doc/Bachelor Thesis/anotation.tex
@@ -22,7 +22,7 @@ Vedúci práce: \Supervisor \\
 \Month \Year \\
 \noindent
 \\
-Sme zavalení množstvom informácií z rôznych zdrojov. V procese výučby je náročné vytvoriť poznámky, ktoré zahŕňajú podmnožinu dôležitých informácií zo zdroja. Existuje niekoľko spôsobov, ako extrahovať informácie z textu. V tejto práci navrhujeme systém na extrakciu informácií a tvorbu poznámok z textu, ktoré sú dôležité z pohľadu výučby. Systém umožní študentom vytvárať personalizované poznámky. Využívame najmä syntaktickú analýzu textu a poznámky sa vytvárajú pomocou využitia značiek slovných druhov, názvoslovných entít, lema tvarov slov a závislostí medzi slovami vo vetách. Výsledkom je interaktívny systém na tvorbu poznámok, ktoré sa vytvárajú na základe pravidiel naučených od používateľa. Pravidlo sa skladá najmä zo závislostí, je závislé od štruktúry viet a aplikovateľné na viacero viet. Overili sme eliminovanie irelevantných informácií pomocou pravidiel, aplikovanie pravidiel na viacero viet a zlepšovanie systému zo zvyšujúcim sa počtom pravidiel z hľadiska spoľahlivosti a personalizácie.
+Sme zavalení množstvom informácií z rôznych zdrojov. V procese výučby je náročné vytvoriť poznámky, ktoré zahŕňajú podmnožinu dôležitých informácií zo zdroja. Existuje niekoľko spôsobov, ako extrahovať informácie z textu. V tejto práci navrhujeme systém na extrakciu informácií a tvorbu poznámok z textu, ktoré sú dôležité z pohľadu výučby. Systém umožní študentom vytvárať personalizované poznámky. Využívame najmä syntaktickú analýzu textu a poznámky sa vytvárajú pomocou využitia značiek slovných druhov, názvoslovných entít, lema tvarov slov a závislostí medzi slovami vo vetách. Výsledkom je interaktívny systém na tvorbu poznámok, ktoré sa vytvárajú na základe pravidiel naučených od používateľa. Pravidlo sa skladá najmä zo závislostí, je závislé od štruktúry viet a aplikovateľné na viacero viet. Overili sme eliminovanie irelevantných informácií pomocou pravidiel, aplikovanie pravidiel na viacero viet a zlepšovanie systému so zvyšujúcim sa počtom pravidiel z hľadiska spoľahlivosti a personalizácie.
 \newpage
 \thispagestyle{plain}
 \begin{center}
