Doc - Final Version

--- a/Doc/Bachelor Thesis/anotation.tex
+++ b/Doc/Bachelor Thesis/anotation.tex
@@ -33,12 +33,12 @@ Sme zavalení množstvom informácií z rôznych zdrojov. V procese výučby je 
 Slovak University of Technology Bratislava \\
 FACULTY OF INFORMATICS AND INFORMATION TECHNOLOGIES \\
 \noindent
-Degree Course: \Program \\
+Degree Course: Informatics \\
 \noindent
 Author: \Author \\
 \ifthenelse {\boolean{bachelor}}
 {
-	{Bachelor thesis: }\Title \\
+	{Bachelor thesis: Educational texts processing} \\
 }
 {
 	{Master thesis: }\Title \\
