--- a/Doc/Bachelor Thesis/FormatsAndDefs.tex
+++ b/Doc/Bachelor Thesis/FormatsAndDefs.tex
@@ -33,6 +33,7 @@
 \usepackage{pdfpages}
 \usepackage{scrextend}
 \usepackage{subfig}
+\usepackage{afterpage}
 
 \newcommand*{\fullref}[1]{\hyperref[{#1}]{\ref*{#1} \nameref*{#1}}}
 \newcommand*{\algoref}[1]{\hyperref[{#1}]{\nameref{#1}}}
