--- a/Doc/Bachelor Thesis/titlepage.tex
+++ b/Doc/Bachelor Thesis/titlepage.tex
@@ -1,48 +1,48 @@
-\begin{center}
-\thispagestyle{empty}
-\ifthenelse {\boolean{english}}
-{
-	{\Large Slovak University of Technology in Bratislava}\textbf{}\\
-	{\Large Faculty of Informatics and Information Technologies}\textbf{}\\[\baselineskip]
-}
-{
-	{\Large Slovenská technická univerzita v Bratislave}\textbf{}\\
-	{\Large Fakulta informatiky a informačných technológií}\textbf{}\\[\baselineskip]
-}
-{\large \FIIT}\\
-\vspace*{5cm}
-{\Large \Author}\textbf{}\\[\baselineskip]
-{\huge \Title}\textbf{}\\[\baselineskip]
-\ifthenelse {\boolean{english}}
-{
-	\ifthenelse {\boolean{bachelor}}
-	{
-		{\large Bachelor thesis}\\
-	}
-	{
-		{\large Master thesis}\\
-	}
-}
-{
-	\ifthenelse {\boolean{bachelor}}
-	{
-		{\large Bakalárska práca}\\
-	}
-	{
-		{\large Diplomová práca}\\
-	}
-}
-
-\end{center}
-\vspace*{7.5cm}
-\ifthenelse {\boolean{english}}
-{
-	Supervisor: \Supervisor \\\\
-}
-{
-	Vedúci práce: \Supervisor \\\\
-}
-\Month \Year
+%\begin{center}
+%\thispagestyle{empty}
+%\ifthenelse {\boolean{english}}
+%{
+%	{\Large Slovak University of Technology in Bratislava}\textbf{}\\
+%	{\Large Faculty of Informatics and Information Technologies}\textbf{}\\[\baselineskip]
+%}
+%{
+%	{\Large Slovenská technická univerzita v Bratislave}\textbf{}\\
+%	{\Large Fakulta informatiky a informačných technológií}\textbf{}\\[\baselineskip]
+%}
+%{\large \FIIT}\\
+%\vspace*{5cm}
+%{\Large \Author}\textbf{}\\[\baselineskip]
+%{\huge \Title}\textbf{}\\[\baselineskip]
+%\ifthenelse {\boolean{english}}
+%{
+%	\ifthenelse {\boolean{bachelor}}
+%	{
+%		{\large Bachelor thesis}\\
+%	}
+%	{
+%		{\large Master thesis}\\
+%	}
+%}
+%{
+%	\ifthenelse {\boolean{bachelor}}
+%	{
+%		{\large Bakalárska práca}\\
+%	}
+%	{
+%		{\large Diplomová práca}\\
+%	}
+%}
+%
+%\end{center}
+%\vspace*{7.5cm}
+%\ifthenelse {\boolean{english}}
+%{
+%	Supervisor: \Supervisor \\\\
+%}
+%{
+%	Vedúci práce: \Supervisor \\\\
+%}
+%\Month \Year
 \newpage
 \begin{center}
 \thispagestyle{empty}
